# jupyter-publish-service

./: .pre-commit-config.yaml  README.md  pyproject.toml
examples/jupyterhub/: README.md  hub_config.py  publishing_config.py
helm/: Chart.yaml  values.yaml
helm/templates/: deployment.yaml  service.yaml  serviceaccount.yaml
jupyter_publishing_service/: _version.py  app.py  constants.py  database.db  models.py  routes.py  storagemanager.py  traits.py
jupyter_publishing_service/authenticator/: abc.py  hub.py  jwt.py  jwt_authenticator.py  service.py
jupyter_publishing_service/authorizer/: abc.py  rbac_authorizer.py  service.py  sqlrbac.py
jupyter_publishing_service/client/: abc.py  simple.py
jupyter_publishing_service/collaborator/: abc.py  client.py  helper.py  sql.py  sql_collaborator.py
jupyter_publishing_service/database/: manager.py
jupyter_publishing_service/file/: abc.py  helper.py  sql.py  sql_manager.py
jupyter_publishing_service/metadata/: abc.py  sql.py
jupyter_publishing_service/models/: rest.py  sql.py
jupyter_publishing_service/session/: helper.py  manager.py
jupyter_publishing_service/storage/: abc.py  base.py  sql.py
jupyter_publishing_service/user/: abc.py  sql.py  sql_store.py
tests/: test_app.py
